# trendlab-tui.2

./: .gitignore  AGENTS.md  Cargo.toml  setup.md
.codex/: config.toml
.cursor/: hooks.json  mcp.json
.cursor/hooks/: AfterFileEdit.ps1  BeforeShellExecution.ps1  Common.ps1  Stop.ps1
.cursor/rules/: 00-project.mdc  10-backtest-safety.mdc  20-ui-philosophy.mdc
crates/trendlab-artifact/: Cargo.toml
crates/trendlab-cli/: Cargo.toml
crates/trendlab-cli/src/: lib.rs  main.rs
crates/trendlab-core/: Cargo.toml
crates/trendlab-data/: Cargo.toml
crates/trendlab-data/src/: lib.rs
crates/trendlab-operator/: Cargo.toml
crates/trendlab-testkit/: Cargo.toml
crates/trendlab-tui/: Cargo.toml
crates/trendlab-tui/src/: lib.rs  main.rs
docs/: Artifacts.md  BarSemantics.md  Implement.md  Invariants.md  MathContract.md  Plan.md  Prompt.md  Roadmap.md  Status.md  Workspace.md  background.md  plan-feedback.md  vibe-coding-start-point.md
fixtures/m1_entry_hold_open_position/: bars.csv  entry-intents.csv  expected-ledger.csv  scenario.txt
fixtures/m1_gap_through_stop_exit/: bars.csv  expected-ledger.csv  scenario.txt
fixtures/m1_intrabar_stop_exit/: bars.csv  expected-ledger.csv  scenario.txt
fixtures/m2_tiingo_resampling/: tiingo-actions.csv  tiingo-daily-bars.csv
fixtures/m2_tiingo_split_adjustment/: tiingo-actions.csv  tiingo-daily-bars.csv
fixtures/m3_close_confirmed_next_open_entry/: bars.csv  expected-ledger.csv  scenario.txt
fixtures/m3_filter_blocked_breakout/: bars.csv  expected-ledger.csv  scenario.txt
fixtures/m3_stop_entry_pending_duplicate_block/: bars.csv  expected-ledger.csv  scenario.txt
xtask/: Cargo.toml
xtask/src/: main.rs
(+4 files in other folders)
