[package]
name = "trendlab-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
trendlab-artifact = { path = "../trendlab-artifact" }
trendlab-core = { path = "../trendlab-core" }
trendlab-data = { path = "../trendlab-data" }
